--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <title>Home</title>
     </head>
-    <body style="text-align: center; background-color: aqua; padding-top: 230px;">
-        Raise your voice to world
+    <body style="text-align: center; background-color: aqua; padding-top: 230px; font-size: x-large;">
+       <h1> Raise your voice to world</h1>
 
     </body>
     
