--- a/contact.html
+++ b/contact.html
@@ -1,53 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
-
-input[type=text],[type=email], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type=submit] {
-  background-color: #212e22;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #4e71d3;
-}
-
-.container {
-width: 50%;
-Margin-left: 23%;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-}
-h3{
-    text-align: center;
-}
-footer{
-    background-color: grey;
-    text-align: center;
-    color: honeydew;
-}
-</style>
+<meta charset="UTF-8">
+<meta name="description" content="personal Web website">
+<meta name="keywords" content="Voice, voiceToWorld, speakRouder">
+<meta name="author" content="Mr NKUBITO">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="log.jpg" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="style.css" >
+<title>Contact Us</title>
 </head>
 <body>
+<div>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home<a/></li>
+      <li><a href="about.html">About<a/></li>
+      <li><a href="videos.html">Videos<a/></li>
+      <li><a href="musics.html">musics<a/></li>
+      <li><a href="courses.html">Courses<a/></li>
+      <li><a href="#">Contact Us<a/></li>
+    </ul>
+  </nav>
+</div>
 
 <h3>Contact Form</h3>
 
@@ -72,7 +47,7 @@ footer{
     <input type="submit" value="Submit">
   </form>
 </div>
-<footer>All Right Reserved @ Mr NKUBITO</footer>
+<footer >All Right Reserved @ Mr NKUBITO</footer>
 
 </body>
 </html>
