--- a/contact.html
+++ b/contact.html
@@ -8,46 +8,47 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="log.jpg" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="style.css" >
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Contact Us</title>
+    <style>
+        nav{background-color: beige;
+        height: 64px;}
+    </style>
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 <div>
-  <nav>
-    <ul>
-      <li><a href="index.html">Home<a/></li>
-      <li><a href="about.html">About<a/></li>
-      <li><a href="videos.html">Videos<a/></li>
-      <li><a href="musics.html">musics<a/></li>
-      <li><a href="courses.html">Courses<a/></li>
-      <li><a href="#">Contact Us<a/></li>
-    </ul>
-  </nav>
+    <nav>
+<div class="topnav" id="myTopnav">
+  <a href="#" >LOG</a>
+  <a href="#about">About</a>
+  <a href="contact.html">Contact</a>
+  <a href="#news">Blog</a>
+  <a href="index.html" >Home</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+</nav>
 </div>
 
 <h3>Contact Form</h3>
 
 <div class="container">
-  <form action="">
+  <form action="" onsubmit="validate()">
     <label for="fname">Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
+    <input type="text" id="name" name="firstname" placeholder="Your name..">
     <label for="email">Email</label>
     <input type="email" id="email" name="email" placeholder="exampe@hotmail.com">
-
-    <label for="Subject">Subject</label>
-    <select id="Subject" name="Subject">
-      <option value="australia">History</option>
-      <option value="canada">Literacy</option>
-      <option value="usa">Science</option>
-    </select>
-
     <label for="Message">Message</label>
-    <textarea id="Message" name="Message" placeholder="Write something.." style="height:200px"></textarea>
-
+    <textarea id="msg" name="msg" placeholder="Write something.." style="height:200px"></textarea>
     <input type="submit" value="Submit">
   </form>
 </div>
 <footer >All Right Reserved @ Mr NKUBITO</footer>
+    
+<script>
 
+    </script>
 </body>
 </html>
