--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="log.jpg" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="style.css" >
-<style>
-    body{
-        background-image: url(backview.JPG);
-        background-size: cover;
-    }
-</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Contact Us</title>
+    <style>
+        nav{background-color: beige;
+        height: 64px;}
+    </style>
+    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 <div>
@@ -35,19 +35,20 @@
 <h3>Contact Form</h3>
 
 <div class="container">
-  <form name="myForm" action="" onsubmit="validation()" method="post">
-    <label for="fname" id="name">Name</label>
-    <input type="text" id="Name" name="firstname" placeholder="Your name..">
-
+  <form action="" method="POST" onsubmit="validate()">
+    <label for="fname">Name</label>
+    <input type="text" id="name" name="firstname" placeholder="Your name..">
     <label for="email">Email</label>
-    <input type="email" id="Email" name="email" placeholder="exampe@hotmail.com">
+    <input type="email" id="email" name="email" placeholder="exampe@hotmail.com">
     <label for="Message">Message</label>
-    <textarea id="Message" name="Message" placeholder="Write something.." style="height:200px"></textarea>
-
+    <textarea id="msg" name="msg" placeholder="Write something.." style="height:200px"></textarea>
     <input type="submit" value="Submit">
   </form>
 </div>
 <footer >All Right Reserved @ Mr NKUBITO</footer>
-<script type="text/javascript" src="main.js"></script>
+    
+<script>
+
+    </script>
 </body>
 </html>
