--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="style.css" >
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>index</title>
-
+ 
 	<style type="text/css">
 
 body {font-family: Arial, Helvetica, sans-serif;
@@ -179,7 +179,7 @@ section p{
 </div>
 </nav>
 	<center>
-	<h1>Hey my name is Mr NKUBITO Emmanuel</h1>
+	<h1>Hi, I'm Mr NKUBITO Emmanuel</h1>
 	<hr style="width: 152px">
 	<p>Software Engineer</p>
         <p>
@@ -190,6 +190,7 @@ section p{
 <footer>
 	All Right Reserved @ Mr NKUBITO
 </footer>
+<script type="text/javascript" src="main.js"></script>
 </body>
 <script>
     function myFunction() {
