--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="log.jpg" type="image/x-icon" />
 <link rel="stylesheet" type="text/css" href="style.css" >
+<link rel="stylesheet" href="topnav.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Contact Us</title>
     <style>
@@ -21,9 +22,10 @@
     <nav>
 <div class="topnav" id="myTopnav">
   <a href="#" >LOG</a>
-  <a href="#about">About</a>
+  <a href="signup.html">SignIn/Up</a>
+  <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
-  <a href="#news">Blog</a>
+  <a href="blog.html">Blog</a>
   <a href="index.html" >Home</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -35,7 +37,7 @@
 <h3>Contact Form</h3>
 
 <div class="container">
-  <form action="" method="POST" onsubmit="validate()">
+  <form method="POST" action="thankyou.html" onsubmit="validate()">
     <label for="fname">Name</label>
     <input type="text" id="name" name="firstname" placeholder="Your name..">
     <label for="email">Email</label>
@@ -47,8 +49,5 @@
 </div>
 <footer >All Right Reserved @ Mr NKUBITO</footer>
     
-<script>
-
-    </script>
 </body>
 </html>
