--- a/index.html
+++ b/index.html
@@ -166,13 +166,14 @@ section p{
 </head>
 <body>
 <section>
-    <nav>
+<nav>
 <div class="topnav" id="myTopnav">
   <a href="#" >LOG</a>
-  <a href="#about">About</a>
+  <a href="signup.html">SignIn/Up</a>
+  <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
-  <a href="#news">Blog</a>
-  <a href="#home" >Home</a>
+  <a href="blog.html">Blog</a>
+  <a href="#" >Home</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
