make same change

--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,7 @@
 <meta name="keywords" content="Voice, voiceToWorld, speakRouder">
 <meta name="author" content="Mr NKUBITO">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="log.jpg" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="style.css" >
+<link rel="icon" href="log.jpg" type="image/x-icon" /><link rel="stylesheet" type="text/css" href="style.css" >
 <link rel="stylesheet" href="topnav.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Contact Us</title>
