--- a/signup.html
+++ b/signup.html
@@ -1,5 +1,15 @@
 <html>
     <head>
+      <!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="description" content="personal Web website">
+<meta name="keywords" content="Voice, voiceToWorld, speakRouder">
+<meta name="author" content="Mr NKUBITO">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="log.jpg" type="image/x-icon" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>signup</title>
     </head>
     <style>
