updating my contact form

--- a/signup.html
+++ b/signup.html
@@ -114,7 +114,6 @@ button:hover {
 }
 #MyForm{
  
- // background-color: #1153e0;
   height: 60%;
   
 
@@ -126,7 +125,7 @@ button:hover {
   margin: 2% auto 10% auto; /* 5% from the top, 15% from the bottom and centered */
   border: 1px solid #888;
   width: 40%; /* Could be more or less, depending on screen size */
-  //height: 50%;
+
 }
 
 /* Style the horizontal ruler */
@@ -230,7 +229,7 @@ hr {
         <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
   
         <div class="clearfix">
-            <button type="button" onclick="document.getElementById('id02').style.display='block'" class="cancelbtn" style="">Login</button>
+            <button type="button" onclick="document.getElementById('id02').style.display='block'" class="cancelbtn" >Login</button>
             <button type="submit" class="signupbtn">Sign Up</button>
         </div>
       </div>
@@ -252,7 +251,7 @@ hr {
         </label>
       </div>
   
-      <div class="container" style="background-color:#f1f1f1,height: 23px;">
+      <div class="container" style="background-color:#f1f1f1; height:23px; ">
         <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
         <span class="psw">Forgot <a href="#">password?</a></span>
       </div>
