--- a/thankyou.html
+++ b/thankyou.html
@@ -7,7 +7,7 @@
     </body>
     <script>
         function thanks(){
-            alert("thanks to you for contacting me");
+            alert("thanks to you for contacting me \n welcome home");
         }
     </script>
 </html>
