updating my contact form validation

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <style>
         nav{background-color: beige;
         height: 64px;}
-       main div{float: left;
+        sector div{float: left;background-color: black;
         }
     </style>
     <script type="text/javascript" src="main.js"></script>
@@ -36,7 +36,7 @@
 </div>
 
 <h3>Contact Form</h3>
-<main>
+<sector>
 <div  class="social">
  <pre>
    <label>
@@ -64,8 +64,9 @@
     <input type="submit" value="Submit">
   </form>
 </div>
-</main>
+</sector>
 <footer >All Right Reserved @ Mr NKUBITO</footer>
     
+
 </body>
 </html>
