--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" href="log.jpg" type="image/x-icon" /><link rel="stylesheet" type="text/css" href="style.css" >
 <link rel="stylesheet" href="topnav.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<title>index</title>
   <style>
     body{
@@ -20,7 +21,7 @@
 	
 </head>
 <body>
-<nav >
+  <nav >
     <div class="topnav" id="myTopnav" >
       <a href="#" >LOG</a>
       <a href="signup.html">SignIn/Up</a>
@@ -32,14 +33,14 @@
         <i class="fa fa-bars"></i>
       </a>
     </div>
-</nav>
+    </nav>
  <main style="text-align: center;">
 
 	<h1>Hi, I'm Mr NKUBITO Emmanuel</h1>
 	<hr style="width: 152px">
 	<p>Software Engineer</p>
         <p>
-           <a href="about.html"><button style="padding:23px;border-radius:32%;background-color: cadetblue;color: green;font-size: 20px;">Read More</button></a>
+            <a href="about.html"><button style="padding:23px;border-radius:32%;background-color: cadetblue;color: green;font-size: 20px;">Read More</button></a>
         </p>
 </main>
 <footer>
