--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
  </pre>
 </div>
 <div class="container">
-  <form method="POST" action="" id="form" onsubmit="validate()">
+  <form method="POST"  id="form" onsubmit="validate()">
     <label for="fname">Name</label>
     <input type="text" id="name" name="firstname" placeholder="Your name..">
     <label for="email">Email</label>
