--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,15 @@
 <meta name="keywords" content="Voice, voiceToWorld, speakRouder">
 <meta name="author" content="Mr NKUBITO">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="log.jpg" type="image/x-icon" />
-<link rel="stylesheet" type="text/css" href="style.css" >
+<link rel="icon" href="log.jpg" type="image/x-icon" /><link rel="stylesheet" type="text/css" href="style.css" >
+<link rel="stylesheet" href="topnav.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Contact Us</title>
     <style>
         nav{background-color: beige;
         height: 64px;}
+        sector div{float: left;background-color: black;
+        }
     </style>
     <script type="text/javascript" src="main.js"></script>
 </head>
@@ -21,9 +23,10 @@
     <nav>
 <div class="topnav" id="myTopnav">
   <a href="#" >LOG</a>
-  <a href="#about">About</a>
+  <a href="signup.html">SignIn/Up</a>
+  <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
-  <a href="#news">Blog</a>
+  <a href="blog.html">Blog</a>
   <a href="index.html" >Home</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -33,9 +36,25 @@
 </div>
 
 <h3>Contact Form</h3>
-
+<sector>
+<div  class="social">
+ <pre>
+   <label>
+    <a href="https://facebook.com/nkubito.emmy.1" target="_blank"><i class="fa fa-facebook">  Facebook</i></a>
+   </label>
+   <label>
+    <a href="https://www.linkedin.com/in/emmanuel-nkubito-36b242155/" target="_blank"><i class="fa fa-linkedin">  Linked In</i></a>
+   </label>
+   <label>
+    <a href="https://www.github.com/nkbtemmy" target="_blank"><i class="fa fa-github">  Github</i></a>
+  </label>
+   <label>
+    <a href="https://twitter.com/nkbtemmy" target="_blank"><i class="fa fa-twitter" >  Twitter</i></a>
+    </label>
+ </pre>
+</div>
 <div class="container">
-  <form action="" onsubmit="validate()">
+  <form method="POST"  id="form" onsubmit="validate()">
     <label for="fname">Name</label>
     <input type="text" id="name" name="firstname" placeholder="Your name..">
     <label for="email">Email</label>
@@ -45,10 +64,9 @@
     <input type="submit" value="Submit">
   </form>
 </div>
+</sector>
 <footer >All Right Reserved @ Mr NKUBITO</footer>
     
-<script>
 
-    </script>
 </body>
 </html>
