updating contact form with form validation and saving it on firestore

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="topnav.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Contact Us</title>
+
     <style>
         nav{background-color: beige;
         height: 64px;}
@@ -54,23 +55,23 @@
  </pre>
 </div>
 <div class="container">
-  <form method="POST" action="#" id="form" >
+  <form method="POST" name="form"  id="Cform"  >
     <label for="fname">Name</label>
-    <input type="text" id="name" name="firstname" placeholder="Your name..">
+    <input type="text" id="cname" name="name" placeholder="Your name..">
     <label for="email">Email</label>
-    <input type="email" id="email" name="email" placeholder="exampe@hotmail.com">
+    <input type="email" id="cemail" name="email" placeholder="exampe@hotmail.com">
     <label for="Message">Message</label>
-    <textarea id="msg" name="msg" placeholder="Write something.." style="height:200px"></textarea>
+    <textarea id="cmsg" name="msg" placeholder="Write something.." style="height:200px"></textarea>
     <input type="submit" id="sub"  value="Submit">
   </form>
 </div>
 </sector>
 <footer >All Right Reserved @ Mr NKUBITO</footer>
-<script type="text/javascript" src="main.js"></script>
+
+<script type="text/javascript" src=""></script>
 <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
 <script type="text/javascript"></script>
 <script type="text/javascript" src="backend.js"></script>
-
 </body>
 </html>
