--- a/index.html
+++ b/index.html
@@ -26,22 +26,17 @@
       <a href="#" >LOG</a>
       <a href="signup.html">SignIn/Up</a>
       <a href="about.html">About</a>
+      <a href="blog/display.html">Blog</a>
       <a href="contact.html">Contact</a>
-
-
-
-
-
-
       <a href="#" >Home</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
     </div>
     </nav>
- <main style="text-align: center;">
+ <main style="text-align: center;" > 
 
-	<h1>Hi, I'm Mr NKUBITO Emmanuel</h1>
+	<h1 >Hi, I'm Mr NKUBITO Emmanuel</h1>
 	<hr style="width: 152px">
 	<p>Software Engineer</p>
         <p>
