--- a/contact.html
+++ b/contact.html
@@ -6,17 +6,18 @@
 <meta name="keywords" content="Voice, voiceToWorld, speakRouder">
 <meta name="author" content="Mr NKUBITO">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" href="log.jpg" type="image/x-icon" /><link rel="stylesheet" type="text/css" href="style.css" >
+<link rel="icon" href="log.jpg" type="image/x-icon" />
+<link rel="stylesheet" type="text/css" href="style.css" >
 <link rel="stylesheet" href="topnav.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Contact Us</title>
+
     <style>
         nav{background-color: beige;
         height: 64px;}
         sector div{float: left;background-color: black;
         }
     </style>
-    <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 <div>
@@ -26,7 +27,7 @@
   <a href="signup.html">SignIn/Up</a>
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
-  <a href="blog.html">Blog</a>
+  <a href="blog/display.html">Blog</a>
   <a href="index.html" >Home</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -54,19 +55,23 @@
  </pre>
 </div>
 <div class="container">
-  <form method="POST"  id="form" onsubmit="validate()">
+  <form method="POST" name="form"  id="Cform"  >
     <label for="fname">Name</label>
-    <input type="text" id="name" name="firstname" placeholder="Your name..">
+    <input type="text" id="cname" name="name" placeholder="Your name..">
     <label for="email">Email</label>
-    <input type="email" id="email" name="email" placeholder="exampe@hotmail.com">
+    <input type="email" id="cemail" name="email" placeholder="exampe@hotmail.com">
     <label for="Message">Message</label>
-    <textarea id="msg" name="msg" placeholder="Write something.." style="height:200px"></textarea>
-    <input type="submit" value="Submit">
+    <textarea id="cmsg" name="msg" placeholder="Write something.." style="height:200px"></textarea>
+    <input type="submit" id="sub"  value="Submit">
   </form>
 </div>
 </sector>
 <footer >All Right Reserved @ Mr NKUBITO</footer>
-    
 
+<script type="text/javascript" src="main.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.17.1/firebase-firestore.js"></script>
+<script type="text/javascript"></script>
+<script type="text/javascript" src="backend.js"></script>
 </body>
 </html>
