--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	
 </head>
 <body>
+  <main style="text-align: center;" > 
   <nav >
     <div class="topnav" id="myTopnav" >
       <a href="#" >LOG</a>
@@ -34,9 +35,9 @@
       </a>
     </div>
     </nav>
- <main style="text-align: center;" > 
+ 
 
-	<h1 >Hi, I'm Mr NKUBITO Emmanuel</h1>
+	<h1 style="padding: 10%;" >Hi, I'm Mr NKUBITO Emmanuel</h1>
 	<hr style="width: 152px">
 	<p>Software Engineer</p>
         <p>
@@ -48,14 +49,6 @@
 </footer>
 <script type="text/javascript" src="main.js"></script>
 </body>
-<script>
-    function myFunction() {
-      var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-      } else {
-        x.className = "topnav";
-      }
-    }
-    </script>
+<script type="text/javascript" src="backend.js"></script>
+
 </html>
