--- a/thankyou.html
+++ b/thankyou.html
@@ -38,7 +38,7 @@
               <a href="about.html">About</a>
               <a href="blog/display.html">Blog</a>
               <a href="contact.html">Contact</a>
-              <a href="#" >Home</a>
+              <a href="index.html" >Home</a>
               <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
               </a>
