--- a/contact.html
+++ b/contact.html
@@ -21,19 +21,18 @@
 </head>
 <body>
 <div>
-    <nav>
-<div class="topnav" id="myTopnav">
-  <a href="#" >LOG</a>
-  <a href="signup.html">SignIn/Up</a>
-  <a href="about.html">About</a>
-  <a href="contact.html">Contact</a>
-  <a href="blog/display.html">Blog</a>
-  <a href="index.html" >Home</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
-</div>
-</nav>
+  <nav>
+    <div class="topnav" id="myTopnav" >
+      <a href="index.html" >LOG</a>
+      <a href="contact.html">Contact</a>
+      <a href="blog/display.html">Blog</a>
+      <a href="about.html">About</a>
+      <a href="index.html" >Home</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    </nav>
 </div>
 
 <h3>Contact Form</h3>
@@ -51,6 +50,15 @@
   </label>
    <label>
     <a href="https://twitter.com/nkbtemmy" target="_blank"><i class="fa fa-twitter" >  Twitter</i></a>
+    </label>
+   <label>
+    <a href="mailto:emmanuelnkubito2@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true">  Gmail</i></a>
+    </label>
+   <label for="">
+    <a href="#" target="_blank"><i class="fa fa-phone" > +250 787 311 654</i></a>
+    </label>
+    <label for="">
+    <a href="https://gps-coordinates.org/my-location.php?lat=-1.9499&lng=30.0666" target="_blank"><i class="fa fa-map-marker" >     Find Me</i></a>
     </label>
  </pre>
 </div>
