--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
 </head>
 <body>
   <main style="text-align: center;" > 
-  <nav >
+  <nav>
     <div class="topnav" id="myTopnav" >
-      <a href="#" >LOG</a>
-      <a href="signup.html">SignIn/Up</a>
-      <a href="about.html">About</a>
-      <a href="blog/display.html">Blog</a>
+      <a href="index.html" >LOG</a>
       <a href="contact.html">Contact</a>
-      <a href="#" >Home</a>
+      <a href="blog/display.html">Blog</a>
+      <a href="about.html">About</a>
+      <a href="index.html" >Home</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
