--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <style>
         nav{background-color: beige;
         height: 64px;}
-        sector div{float: left;background-color: black;
+        sector div{float: left;background-color: rgb(6, 0, 12);
         }
     </style>
 </head>
@@ -38,29 +38,28 @@
 <h3>Contact Form</h3>
 <sector>
 <div  class="social">
- <pre>
+
    <label>
     <a href="https://facebook.com/nkubito.emmy.1" target="_blank"><i class="fa fa-facebook">  Facebook</i></a>
-   </label>
+   </label><br><br><br>
    <label>
     <a href="https://www.linkedin.com/in/emmanuel-nkubito-36b242155/" target="_blank"><i class="fa fa-linkedin">  Linked In</i></a>
-   </label>
+   </label><br><br><br>
    <label>
     <a href="https://www.github.com/nkbtemmy" target="_blank"><i class="fa fa-github">  Github</i></a>
-  </label>
+  </label><br><br><br>
    <label>
     <a href="https://twitter.com/nkbtemmy" target="_blank"><i class="fa fa-twitter" >  Twitter</i></a>
-    </label>
+    </label><br><br><br>
    <label>
     <a href="mailto:emmanuelnkubito2@gmail.com" target="_blank"><i class="fa fa-envelope" aria-hidden="true">  Gmail</i></a>
-    </label>
+    </label><br><br><br>
    <label for="">
-    <a href="#" target="_blank"><i class="fa fa-phone" > +250 787 311 654</i></a>
-    </label>
+    <a href="#" target="_blank"><i class="fa fa-phone" > +250787311654</i></a>
+    </label><br><br><br>
     <label for="">
     <a href="https://gps-coordinates.org/my-location.php?lat=-1.9499&lng=30.0666" target="_blank"><i class="fa fa-map-marker" >     Find Me</i></a>
-    </label>
- </pre>
+    </label><br><br><br>
 </div>
 <div class="container">
   <form method="POST" name="form"  id="Cform"  >
